syntax = "proto3";

package poll;

import "google/protobuf/empty.proto";

option go_package = "./;poll";


message VoteRequest {
  uint64 user_id = 1;
  string role = 2;
  VotePollRequest vote_data = 3;
}

message VotePollRequest {
  uint64 poll_id = 1;
  uint64 answer = 2;
}

message GetStatsResponse {
  repeated PollStatsResponse polls = 1;
}

message PollStatsResponse {
  uint64 poll_id = 1;
  double average = 2;
  string name = 3;
  repeated StarStats stars = 4;
}

message StarStats {
  uint64 star = 1;
  uint64 amount = 2;
  double percentage = 3;
}

message GetNewPollRequest {
  uint64 user_id = 1;
  string role = 2;
}

message PollResponse {
  uint64 poll_id = 1;
  string name = 2;
}

service PollService {
  rpc Vote(VoteRequest) returns (google.protobuf.Empty);
  rpc GetStats(google.protobuf.Empty) returns (GetStatsResponse);
  rpc GetNewPoll(GetNewPollRequest) returns (PollResponse);
}